# NanoLogLite

./: CMakeLists.txt  Log.h  NanoLog.cc  NanoLog.h  README.md  RuntimeLogger.cc  RuntimeLogger.h  build.sh
test/: CMakeLists.txt  log_test.cc
